Fix issue with overflow in Background animation

--- a/src/components/common/BackgroundAnimation/BackgroundAnimation.module.scss
+++ b/src/components/common/BackgroundAnimation/BackgroundAnimation.module.scss
@@ -18,7 +18,6 @@ $sway-type: "sway-left-to-right", "sway-right-to-left";
   position: fixed;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 .bubble {
